# infercnv-mcp

./: README.md  pyproject.toml
.github/: release.yml
src/infercnv_mcp/: cli.py
src/infercnv_mcp/schema/: __init__.py  pl.py  tl.py  util.py
src/infercnv_mcp/server/: __init__.py  pl.py  pp.py  tl.py  util.py
src/infercnvpy_mcp/: __main__.py  cli.py  util.py
src/infercnvpy_mcp/schema/: __init__.py  pl.py  pp.py  tl.py  util.py
src/infercnvpy_mcp/server/: __init__.py  pl.py  pp.py  tl.py  util.py
tests/: conftest.py  test_cnv.py
tests/data/: gene_pos.csv  gene_pos.tsv
