[project]
name = "infercnvpy-mcp"
dynamic = ["version"] 
description = "Natural language interface for CNV inference from scRNA-Seq data with infercnvpy through MCP."
readme = "README.md"
authors = [
    { name = "author", email = "author@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.0",
    "scanpy>=1.10.0",
    "infercnvpy>=0.6.0",
    "scmcp-shared",
    "matplotlib",
    "pydantic>=2.0.0",
    "typer"
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.5",
]

[project.scripts]
infercnvpy-mcp = "infercnvpy_mcp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/infercnvpy_mcp/__init__.py" 

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function" 