[project]
name = "infercnv-mcp"
dynamic = ["version"] 
description = "Natural language interface for CNV inference from scRNA-Seq data with infercnvpy through MCP."
readme = "README.md"
authors = [
    { name = "shuang", email = "hsh-me@outlook.com" },
    { name = "mugpeng", email = "yc47680@um.edu.mo" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.4",
    "scanpy",
    "infercnvpy",
    "nest_asyncio",
    "scmcp-shared>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.5",
]

[project.scripts]
infercnv-mcp = "infercnv_mcp.cli:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/infercnv_mcp/__init__.py" 

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function" 
